# quant_system

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  com.quant.daily.plist  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_daily.sh  terminal-conversation.md
ai-conversations/: README.md  claude-2026-04-29-backtest-engine-and-m1-universe-expansion.md
alembic/: env.py
config/: cb_double_low.yaml  cells.yaml  equity_factor.yaml  intraday.yaml  options.yaml  zhuang.yaml
data/: baseline_signals.txt  prefetch_failed.txt  prefetch_progress.txt  today_candidates.txt
deploy/: com.quant.daily.plist  run_daily.sh  start_api.sh
frontend/: index.html  vite.config.ts
memory/: MEMORY.md  a1_northbound_dead_southbound_alive_2026-06.md  a1prime_southbound_gate_falsified_2026-06.md  a2_csi1000_l9b_paradox_falsified_2026-06.md  a_mr_rebuild_v6_grid_2026-05.md  a_mr_v2_falsified_2026-05.md  a_share_e_transfer_2026-05.md  akshare_cb_panel_timeout_2026-06.md  capitulation_strategy_falsified_2026-06.md  case_2026_06_08_600584_distribution.md  cb_data_probe_2026-06.md  cb_double_low_2026_07_01_pm_operations.md  cb_double_low_pr10_intraday_risk_2026-06.md  cb_double_low_pr11_closed_trades_html_2026-06.md  cb_double_low_pr12_self_learning_2026-06.md  cb_double_low_pr5_4y6y_2026-06.md  cb_double_low_pr6_v7_overlay_2026-06.md  cb_double_low_pr7_yaml_daily_2026-06.md  cb_double_low_pr8_journal_portfolio_2026-06.md  cb_double_low_pr9_rebalance_signal_2026-06.md  db_decouple_phase0_2026-05.md  deploy_checklist_2026-05.md  deployment_plan_2026-05.md  deployment_plan_v7_2026-06.md  (+79 more)
(+534 files in other folders)
