[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_system"
version = "0.1.0"
description = "多市场（A/HK/US）量化策略系统：bottom-up 选股 + 择时 + 风控"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tanglaoye" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "python-dateutil>=2.8",
    "akshare>=1.12.0",
    "pypdf>=4.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
