[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_system"
version = "0.2.0"
description = "多市场量化策略系统 monorepo：equity_factor（A/HK/US 选股+择时）+ options（QQQ Bull Call Spread）+ zhuang（吃货期）+ 联合 HTML 日报"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tanglaoye" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "python-dateutil>=2.8",
    "akshare>=1.14.0",
    "pypdf>=4.0",
    "requests>=2.28",
    "yfinance>=0.2.36",
    "ib_insync>=0.9.86",
    "baostock>=0.8.0",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]
db = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
